--- a/css/stylednd.css
+++ b/css/stylednd.css
@@ -184,6 +184,7 @@ body {
       .property-line,
       .property-block{
           width: 100%;
+          height: 100%;
           display: block;
       }
       .stat-block.wide .section-left{
@@ -193,7 +194,7 @@ body {
         margin: 0;
       }
       .stat-block{
-          width: 40%;
+          width: 100%;
           display: inline-block;
           vertical-align: top;
       }
@@ -201,7 +202,7 @@ body {
           page-break-after: always;
       }
   }
-  @media screen and (max-width: 575px){
+  @media screen and (max-width: 675px){
       .stat-block{
           margin: 20px 0;
       }
